bugfix width on small screens

--- a/src/encoding_toolbox.css
+++ b/src/encoding_toolbox.css
@@ -55,10 +55,10 @@ div.buttons{
 }
 
 div.buttons a {
-    margin-left:20px;
-    margin-right:20px;
+    margin-left:10px;
+    margin-right:10px;
     background-color: aliceblue;
-    padding:15px;
+    padding:12px;
     border:1px solid darkcyan;
     font-weight: bold;
     color:darkcyan;
